--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "^6.26.0",
     "browser-sync": "^2.23.6",
     "del": "^3.0.0",
+    "fs": "0.0.1-security",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
@@ -21,9 +22,13 @@
     "gulp-css-unit": "^1.2.2",
     "gulp-csso": "^3.0.1",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-pug": "^3.3.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-svgstore": "^6.1.1",
     "install": "^0.10.4"
   },
   "dependencies": {}
